# website-agent

./: .env  .env.example  .gitignore  Dockerfile  README.md  analyze_results.py  app.py  check_mcp.py  debug_mcp.py  debug_scrape_content.py  ingest_data.py  list_tavily_mcp.py  list_tools_v2.py  mcp_source.txt  pyproject.toml  setup_structure.sh  test_full_agent.py  test_guardrails_integration.py  test_mcp_adapter.py  test_mcp_direct.py  test_mcp_v3.py  test_memory_integration.py  test_raw_sse.py  test_retrieval.py  test_scraper.py  visualize_graph.py
chroma_db/: chroma.sqlite3
src/: main.py  ui.py
src/agent/: main.py
src/agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agent/core/: config.py  ingestion.py  llm.py  middleware.py  prompts.py  registry.py  retrieval.py  state.py  whatsapp_client.py
src/agent/graph/: agent.py  alpha_codium.py
src/agent/graph/nodes/: research_nodes.py
src/agent/tools/: __init__.py  scraper.py  search.py
tests/: benchmark_latency.py
